# logfn

./: Cargo.toml  README.md
examples/: main.rs
src/: lib.rs
tests/ui/err/: has-too-many-arguments.stderr
tests/ui/ok/: fastrace.rs
