[package]
name = "logcall"
version = "0.1.11"
edition = "2021"
description = "An attribute macro that logs the function return value."
repository = "https://github.com/fast/logcall"
documentation = "https://docs.rs/logcall"
categories = ["development-tools::debugging"]
readme = "README.md"
keywords = ["log", "macro", "derive", "logging", "function"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = { version = "1" }
proc-macro2 = { version = "1" }
quote = { version = "1" }
syn = { version = "2", features = [
    "full",
    "parsing",
    "extra-traits",
    "proc-macro",
    "visit-mut",
] }

[dev-dependencies]
async-trait = { version = "0.1" }
fastrace = { version = "0.7" }
log = { version = "0.4" }
logforth = { version = "0.19" }
pollster = { version = "0.4" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
trybuild = { version = "1" }
